// Copyright (c) 2023 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate e2e tests,
// which are released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/e2e/blob/main/LICENSE

syntax = "proto3";

option java_package = "dev.restate.e2e.services.sideeffect";
option java_outer_classname = "SideEffectProto";

import "dev/restate/ext.proto";

package sideeffect;

service SideEffect {
  option (dev.restate.ext.service_type) = UNKEYED;

  rpc InvokeSideEffects(InvokeSideEffectsRequest) returns (InvokeSideEffectsResult);
}

message InvokeSideEffectsRequest {}

message InvokeSideEffectsResult {
  int32 non_deterministic_invocation_count = 1;
}